--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1"
+  },
+  "dependencies": {
+    "yargs": "^11.0.0"
   }
 }
